# concore

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
test/: CMakeLists.txt
test/func/std/: test_concept_wrappers.cpp
test_package/: CMakeLists.txt
